update server to split root API response into separate responses for the homepage and channels.

--- a/serverless/template.yaml
+++ b/serverless/template.yaml
@@ -13,6 +13,7 @@ Globals:
         CHANNELS_TABLE_NAME: !Ref ChannelsTable
         COGNITO_USER_POOL_ID: !Ref UserPool
         COGNITO_USER_POOL_CLIENT_ID: !Ref UserPoolClient
+        REGION: !Ref AWS::Region
 
 Parameters:
   AuthName:
@@ -227,6 +228,22 @@ Resources:
           Properties:
             Path: /user
             Method: GET
+  GetUserNameLambda:
+    Type: 'AWS::Serverless::Function'
+    Properties:
+      Handler: index.getUsername
+      Layers:
+        - !Ref LambdaLayer
+      CodeUri: lambda/
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref ChannelsTable
+      Events:
+        Api1:
+          Type: Api
+          Properties:
+            Path: /user/username
+            Method: GET
   UpdateUserAttributeLambda:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -268,24 +285,7 @@ Resources:
           Type: Api
           Properties:
             Path: /user/delete
-            Method: GET # Workaround for CORS; should be DELETE method
-
-  GetDDBChannelsLambda:
-    Type: 'AWS::Serverless::Function'
-    Properties:
-      Handler: index.get
-      Layers:
-        - !Ref LambdaLayer
-      CodeUri: lambda/
-      Policies:
-        - DynamoDBCrudPolicy:
-            TableName: !Ref ChannelsTable
-      Events:
-        Api1:
-          Type: Api
-          Properties:
-            Path: /
-            Method: GET
+            Method: DELETE
   
   # IVS Interaction Endpoints
   
@@ -330,29 +330,46 @@ Resources:
       CodeUri: lambda/
       Policies:
         - DynamoDBCrudPolicy:
-            TableName: !Ref MetadatasTable
+            TableName: !Ref ChannelsTable
       Events:
         Api1:
           Type: Api
           Properties:
             Path: /channels
             Method: GET
-  GetStreamsLambda:
+  GetStreamLambda:
     Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: index.getStreams
+      Handler: index.stream
       Layers:
         - !Ref LambdaLayer
       CodeUri: lambda/
       Policies:
         - DynamoDBCrudPolicy:
-            TableName: !Ref MetadatasTable
+            TableName: !Ref ChannelsTable
       Events:
         Api1:
           Type: Api
           Properties:
-            Path: /channels/streams
+            Path: /stream
             Method: GET
+  LiveChannelsLambda:
+    Type: 'AWS::Serverless::Function'
+    Properties:
+      Handler: index.liveChannels
+      Layers:
+        - !Ref LambdaLayer
+      CodeUri: lambda/
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref ChannelsTable
+      Events:
+        Api1:
+          Type: Api
+          Properties:
+            Path: /live-channels
+            Method: GET
+
   GetStreamKeysLambda:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -448,13 +465,13 @@ Resources:
             Resource: '*'
       Roles:
         - Ref: GetChannelsLambdaRole
-        - Ref: GetStreamsLambdaRole
         - Ref: SendMetadaLambdaRole
         - Ref: SignUpLambdaRole
         - Ref: UpdateUserAttributeLambdaRole
         - Ref: ResetDefaultChannelStreamKeyLambdaRole
         - Ref: DeleteUserLambdaRole
         - Ref: IsLiveLambdaRole
+        - Ref: GetUserNameLambdaRole
 
 Outputs:
   ApiURL:
